package adsyf.renewables.v2;

public enum EventType {
    SOLAR,SOLAR_TOTAL,DCDC,DCAC,CHARGE,DISCHARGE,ACDC,BUY,SELL,USE
}
