package adsyf.renewables.v2;

public enum LossType {
    EFFICIENCY,CLIPPING,SELFUSE
}
